<resources>
    <string name="app_name">Book Store</string>

    <string name="insert_dummy_book">Insert Dummy Book</string>
    <string name="delete_all">Delete All</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete Book</string>

    <string name="empty_view_text_1">There are no books to display!</string>
    <string name="empty_view_text_2">Tap + to start adding</string>

    <string name="price_label_symbol">Price £:</string>
    <string name="price_label">Price</string>
    <string name="qty_label">Qty</string>
    <string name="title_label">Title</string>
    <string name="author_label">Author</string>
    <string name="supplier_label">Supplier</string>
    <string name="supplier_tel_label">Supplier Tel.</string>

    <string name="minus">-</string>
    <string name="plus">+</string>

    <string name="editor_title_edit">Edit book</string>
    <string name="editor_title_add">Add a new book</string>

    <string name="toast_zero_qty">Minimum Qty is 0</string>
    <string name="toast_save_error">Error saving book</string>
    <string name="toast_insert_success">Book added successfully</string>
    <string name="toast_update_success">Book updated successfully</string>
    <string name="toast_delete_error">Book was not deleted</string>
    <string name="toast_delete_success">Book deleted successfully</string>
    <string name="toast_complete_all_fields">Please complete all fields</string>
    <string name="toast_delete_all_error">Error deleting all</string>
    <string name="toast_delete_all_success">All books deleted!</string>
    <string name="toast_book_sale_error">Error selling book</string>
    <string name="toast_book_sale_success">Book Sold! :)</string>
    <string name="toast_out_of_stock">Book is out of stock</string>

    <string name="dialog_delete_confirm">Are you sure you want to delete this book?</string>
    <string name="dialog_unsaved_changes_confirm">Return without saving changes?</string>
    <string name="dialog_delete_all_confirm">Do you really want to delete all books?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="dummy_book_title">Book Title</string>
    <string name="dummy_book_author">J Bloggs</string>
    <string name="dummy_book_supplier">Books R Us</string>
    <string name="dummy_book_suppler_tel">01234567890</string>
</resources>
